HelloUltraviolet/Fixtures/RejectedSource/Procedures/ContractPredicateImpureMove/Expected.uv
//! Expected diagnostic metadata for the ContractPredicateImpureMove rejected-source specimen.

expectedDiagnostic("E-SEM-2802", "req.15.ContractNeverPureForms")
